[gd_scene load_steps=39 format=2]

[ext_resource path="res://Animals/rabbit_anim.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Rabbit.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.26796
height = 2.3397

[sub_resource type="CircleShape2D" id=2]
radius = 10.6247

[sub_resource type="CircleShape2D" id=3]
radius = 60.9997

[sub_resource type="Animation" id=4]
resource_name = "idle_behind"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ), Vector2( 1, 3 ), Vector2( 2, 3 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_forward"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 2 ), Vector2( 1, 2 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_left"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle_right"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "run_behind"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 7 ), Vector2( 1, 7 ), Vector2( 2, 7 ), Vector2( 3, 7 ), Vector2( 4, 7 ), Vector2( 5, 7 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "run_forward"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 6 ), Vector2( 1, 6 ), Vector2( 2, 6 ), Vector2( 3, 6 ), Vector2( 4, 6 ), Vector2( 5, 6 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "run_left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 5 ), Vector2( 1, 5 ), Vector2( 2, 5 ), Vector2( 3, 5 ), Vector2( 4, 5 ), Vector2( 5, 5 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "run_right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 4 ), Vector2( 1, 4 ), Vector2( 2, 4 ), Vector2( 3, 4 ), Vector2( 4, 4 ), Vector2( 5, 4 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "walk_behind"
length = 0.96
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.64, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 7 ), Vector2( 1, 7 ), Vector2( 2, 7 ), Vector2( 3, 7 ), Vector2( 4, 7 ), Vector2( 5, 7 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "walk_forward"
length = 0.96
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.64, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 6 ), Vector2( 1, 6 ), Vector2( 2, 6 ), Vector2( 3, 6 ), Vector2( 4, 6 ), Vector2( 5, 6 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "walk_left"
length = 0.96
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.64, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 5 ), Vector2( 1, 5 ), Vector2( 2, 5 ), Vector2( 3, 5 ), Vector2( 4, 5 ), Vector2( 5, 5 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "walk_right"
length = 0.96
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.64, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 4 ), Vector2( 1, 4 ), Vector2( 2, 4 ), Vector2( 3, 4 ), Vector2( 4, 4 ), Vector2( 5, 4 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "idle_forward"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "idle_behind"

[sub_resource type="AnimationNodeBlendSpace2D" id=20]
blend_point_0/node = SubResource( 16 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 17 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 18 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 19 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "run_forward"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "run_behind"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "run_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=25]
blend_point_0/node = SubResource( 21 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 22 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 23 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 24 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "walk_forward"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "walk_behind"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=30]
blend_point_0/node = SubResource( 26 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 27 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 28 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 29 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachine" id=35]
states/Idle/node = SubResource( 20 )
states/Idle/position = Vector2( 338, 32 )
states/Run/node = SubResource( 25 )
states/Run/position = Vector2( 492, 32 )
states/Walk/node = SubResource( 30 )
states/Walk/position = Vector2( 338, 118 )
transitions = [ "Idle", "Run", SubResource( 31 ), "Run", "Idle", SubResource( 32 ), "Idle", "Walk", SubResource( 33 ), "Walk", "Idle", SubResource( 34 ) ]
start_node = "Idle"
graph_offset = Vector2( -92, -24 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=36]

[node name="Rabbit" type="KinematicBody2D" groups=[
"Prey",
]]
collision_layer = 17
collision_mask = 17
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )
vframes = 9
hframes = 6
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.150685, -0.0562285 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( 0.94278, -6.00245 )
monitoring = false
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.840897, 1.26134 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="View" type="Area2D" parent="."]
visible = false
position = Vector2( 0.662167, -12.3163 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle_behind = SubResource( 4 )
anims/idle_forward = SubResource( 5 )
anims/idle_left = SubResource( 6 )
anims/idle_right = SubResource( 7 )
anims/run_behind = SubResource( 8 )
anims/run_forward = SubResource( 9 )
anims/run_left = SubResource( 10 )
anims/run_right = SubResource( 11 )
anims/walk_behind = SubResource( 12 )
anims/walk_forward = SubResource( 13 )
anims/walk_left = SubResource( 14 )
anims/walk_right = SubResource( 15 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 35 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 36 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0, 0 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="View" to="." method="_on_View_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_View_body_exited"]
